--- a/src/pages/contactus/contactus.css
+++ b/src/pages/contactus/contactus.css
@@ -1,16 +1,44 @@
-.contact_info{
-    align-items: center;
-    display: flex;
-    justify-content: center;
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins',sans-serif;
 }
 
 
-.contact_info_item{
-        display: flex;
+
+.contact_info{
+    width: 100%;
+    height:650px;
+    padding: 0 10%;
+    background: #f7efef;
+    margin-top: 0px;
+    
+}
+.nav{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
+    position: relative;
+    z-index: 100;
+}
+
+.contact_info_item1{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+
+.contact_info_item2{
+    margin-top: 90px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    
         text-align: center;
-        justify-content: start;
-        align-items: center;
         width: 250px;
         height: 70px;
         margin: 0;
