--- a/src/pages/findbuddies/table.css
+++ b/src/pages/findbuddies/table.css
@@ -55,6 +55,14 @@ td {
     margin-right: 16px;
     font-size: 17px;
   }
+
+  .search input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+  }
+
   .header{
     width: 100%;
     height:650px;
